--- a/1-hello-world/index.html
+++ b/1-hello-world/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
+<!-- 文章がhtml5で作成されていることを宣言するもの -->
+
 <html>
+<!-- htmlとはHyper Text Markup Languageの略で、html文章であることを宣言します -->
+
   <head>
+    <!-- 文章に関する情報を記述します。<title></title>で指定した文章以外のほとんどはブラウザに表示されません。 -->
+
     <meta charset="UTF-8">
+    <!-- この文章に関する情報(メタ情報)を指定して、ブラウザや検索ロボットに知らせるためのタグです。 -->
+    <!-- charsetは文字コードを指定しています。 -->
+
     <title>first html</title>
+    <!-- 文章にタイトルをつけます。ここで指定した文字はブラウザのツールバーに表示されます。 -->
+
   </head>
   <body>
+    <!-- 実際にブラウザに表示される文章の本体を記述します -->
+
     <h1>Hello World</h1>
+    <!-- Heading（見出し)の頭文字を意味しており1~6まで文字の大きさを簡単に調節できます。 -->
   </body>
 </html>
